fixed(todo-app): fixed placeholder color contrast with input background

--- a/src/components/todo/todo.css
+++ b/src/components/todo/todo.css
@@ -44,6 +44,10 @@
   outline: none;
   padding: 5px;
   border-radius: 4px;
+  color: #000;
+}
+.new-task input::placeholder{
+  color: #000;
 }
 .new-task button{
   background: green;
